build.xml classpath fixes.